# Sustainable_Code_Demo

./: LICENSE  README.md  demo_notebook.ipynb  pyproject.toml
.github/workflows/: python-package.yml
Sustainable_Code_Demo/: __init__.py  calculator.py  definitions.py  hamiltonians.py
tests/: calculator_test.py  definitions_test.py  hamiltonians_test.py
