[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "Sustainable_Code_Demo"
version = "0.0.1"
description = "A demo to showcase some sustainable code management features."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "scipy",
    "pytest",
    "pytest-cov"
]

[tool.coverage.run]
omit = [
    # omit anything in a .local directory anywhere
    "tests/*",
    "Sustainable_Code_Demo/__init__.py",
    ]
